# scholar_tracker

./: .gitignore  CLAUDE.md  README.md  config.json  index.html  pyproject.toml  requirements.txt  run.py  run_daily_update.sh
.github/workflows/: update_citations.yml
data/: README.md  citation_history.json  citation_trends.html  citations.md  dashboard.html  paper_trends.html  tracker.log.1
src/: chart_generator.py  dashboard_generator.py  exceptions.py  markdown_writer.py  scholar_tracker.py  utils.py
tests/: __init__.py  test_chart_generator.py  test_dashboard_generator.py  test_markdown_writer.py  test_scholar_tracker.py  test_utils.py
